executables/lab03/y.output
Terminals unused in grammar

    Y_LOGICO
    TIPO_BOOLEAN
    BUCLE_SALIDA
    TIPO_CARACTER
    BUCLE_CONTINUACION
    TIPO_DOUBLE
    CONDICION_SINO
    FIN
    FALSO
    BUCLE_FOR
    FUNCION_INICIO
    CONDICION_INICIO
    ENTRADA
    TIPO_ENTERO
    OPERACION_MODULAR
    NEGACION_LOGICA
    O_LOGICO
    SALIDA
    FUNCION_RETORNO
    TIPO_CADENA
    VERDADERO
    VARIABLE
    BUCLE_WHILE
    OPERACION_POTENCIA
    LEFT_SHIFT
    RIGHT_SHIFT
    MENOR_O_IGUAL_QUE
    MAYOR_O_IGUAL_QUE
    COMENTARIO_EN_LINEA
    INICIO_FIN_COMENTARIO_EN_BLOQUE
    ASIGNACION_PROFUNDA
    IGUALDAD
    DESIGUALDAD
    INCREMENTO_EN_UNIDAD
    DECREMENTO_EN_UNIDAD
    CONDICION_UNICA
    INCREMENTO_DIRECTO
    DECREMENTO_DIRECTO
    MULTIPLICACION_DIRECTA
    DIVISION_DIRECTA


Grammar

    0 $accept: expresion $end

    1 expresion: primario
    2          | primario '+' primario

    3 primario: constante
    4         | '(' expresion ')'

    5 constante: NUMERO_ENTERO
    6          | NUMERO_REAL
    7          | IDENTIFICADOR


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 4
    ')' (41) 4
    '+' (43) 2
    error (256)
    Y_LOGICO (258)
    TIPO_BOOLEAN (259)
    BUCLE_SALIDA (260)
    TIPO_CARACTER (261)
    BUCLE_CONTINUACION (262)
    TIPO_DOUBLE (263)
    CONDICION_SINO (264)
    FIN (265)
    FALSO (266)
    BUCLE_FOR (267)
    FUNCION_INICIO (268)
    CONDICION_INICIO (269)
    ENTRADA (270)
    TIPO_ENTERO (271)
    OPERACION_MODULAR (272)
    NEGACION_LOGICA (273)
    O_LOGICO (274)
    SALIDA (275)
    FUNCION_RETORNO (276)
    TIPO_CADENA (277)
    VERDADERO (278)
    VARIABLE (279)
    BUCLE_WHILE (280)
    OPERACION_POTENCIA (281)
    LEFT_SHIFT (282)
    RIGHT_SHIFT (283)
    MENOR_O_IGUAL_QUE (284)
    MAYOR_O_IGUAL_QUE (285)
    COMENTARIO_EN_LINEA (286)
    INICIO_FIN_COMENTARIO_EN_BLOQUE (287)
    ASIGNACION_PROFUNDA (288)
    IGUALDAD (289)
    DESIGUALDAD (290)
    INCREMENTO_EN_UNIDAD (291)
    DECREMENTO_EN_UNIDAD (292)
    CONDICION_UNICA (293)
    INCREMENTO_DIRECTO (294)
    DECREMENTO_DIRECTO (295)
    MULTIPLICACION_DIRECTA (296)
    DIVISION_DIRECTA (297)
    NUMERO_ENTERO (298) 5
    NUMERO_REAL (299) 6
    IDENTIFICADOR (300) 7


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    expresion (50)
        on left: 1 2
        on right: 0 4
    primario (51)
        on left: 3 4
        on right: 1 2
    constante (52)
        on left: 5 6 7
        on right: 3


State 0

    0 $accept: . expresion $end

    NUMERO_ENTERO  shift, and go to state 1
    NUMERO_REAL    shift, and go to state 2
    IDENTIFICADOR  shift, and go to state 3
    '('            shift, and go to state 4

    expresion  go to state 5
    primario   go to state 6
    constante  go to state 7


State 1

    5 constante: NUMERO_ENTERO .

    $default  reduce using rule 5 (constante)


State 2

    6 constante: NUMERO_REAL .

    $default  reduce using rule 6 (constante)


State 3

    7 constante: IDENTIFICADOR .

    $default  reduce using rule 7 (constante)


State 4

    4 primario: '(' . expresion ')'

    NUMERO_ENTERO  shift, and go to state 1
    NUMERO_REAL    shift, and go to state 2
    IDENTIFICADOR  shift, and go to state 3
    '('            shift, and go to state 4

    expresion  go to state 8
    primario   go to state 6
    constante  go to state 7


State 5

    0 $accept: expresion . $end

    $end  shift, and go to state 9


State 6

    1 expresion: primario .
    2          | primario . '+' primario

    '+'  shift, and go to state 10

    $default  reduce using rule 1 (expresion)


State 7

    3 primario: constante .

    $default  reduce using rule 3 (primario)


State 8

    4 primario: '(' expresion . ')'

    ')'  shift, and go to state 11


State 9

    0 $accept: expresion $end .

    $default  accept


State 10

    2 expresion: primario '+' . primario

    NUMERO_ENTERO  shift, and go to state 1
    NUMERO_REAL    shift, and go to state 2
    IDENTIFICADOR  shift, and go to state 3
    '('            shift, and go to state 4

    primario   go to state 12
    constante  go to state 7


State 11

    4 primario: '(' expresion ')' .

    $default  reduce using rule 4 (primario)


State 12

    2 expresion: primario '+' primario .

    $default  reduce using rule 2 (expresion)
